# SAT-Solver

./: .gitignore  CMakeLists.txt  Error.h  Helper.h  Parser.h  README.md  eval.sh
a0/: user.yml
pa1/: Lexer.cc  Lexer.h  Makefile  Parser.cc  Parser.h  eval.sh  main.cc
pa1/test/: test2.in  test2.out
pa2/: ASTree.cc  ASTree.h  CMakeLists.txt  Lexer.cc  Lexer.h  Makefile  Parser.cc  Parser.h  SATSolver.cc  SATSolver.h  Tseitin.cc  Tseitin.h  eval.sh  main.cc
